<?xml version="1.0" encoding="utf-8"?>
<com.chauthai.swipereveallayout.SwipeRevealLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRevealLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    app:dragEdge="right"
    app:mode="same_level">
    <!-- Your secondary layout here -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/learnedBtnId"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/bg_swipemenu_learned"
                android:text="@string/vocabList_btn_learned"
                android:textColor="@android:color/white"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/deleteBtnId"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:background="@drawable/bg_swipemenu_delete"
                android:text="@string/vocabList_btn_delete"
                android:textColor="@android:color/white"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Your main layout here -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:id="@+id/clickLayoutId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_vocablist_item_deselected" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/itemViewId"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/wordTextId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/vocabList_demo_word"
                    android:textAlignment="textStart"
                    android:textColor="#027FFF"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/meaningTextId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/vocabList_demo_meaning"
                    android:textAlignment="textEnd"
                    android:textColor="#EC3749"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/exampleTextId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/vocabList_demo_example"
                    android:textAlignment="textEnd"
                    android:textColor="#027FFF"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</com.chauthai.swipereveallayout.SwipeRevealLayout>