<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="450dp"
    android:layout_gravity="center"
    app:cardBackgroundColor="#FEC208"
    app:cardElevation="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="#FEC208"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FEC208"
            android:padding="10dp">

            <View
                android:id="@+id/editButtonId"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/wordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/vocabList_demo_word"
                android:textColor="#027FFF"
                android:textSize="40sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/meaningText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/vocabList_demo_meaning"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@+id/wordText"
                app:layout_constraintStart_toStartOf="@+id/wordText"
                app:layout_constraintTop_toBottomOf="@+id/wordText" />

            <TextView
                android:id="@+id/exampleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/vocabList_demo_example"
                android:textColor="#014080"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/meaningText"
                app:layout_constraintStart_toStartOf="@+id/meaningText"
                app:layout_constraintTop_toBottomOf="@+id/meaningText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>