<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateVocabActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@drawable/bg_getvocab_single_item"
            android:orientation="vertical"
            android:padding="15dp"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/updateWordEditTextId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_getvocab_edittext"
                android:ems="10"
                android:hint="@string/vocabList_demo_word"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@android:color/black"
                tools:ignore="Autofill,RtlSymmetry" />

            <EditText
                android:id="@+id/updateMeaningEditTextId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@drawable/bg_getvocab_edittext"
                android:ems="10"
                android:hint="@string/vocabList_demo_meaning"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@android:color/black"
                tools:ignore="Autofill,RtlSymmetry" />

            <EditText
                android:id="@+id/updateExampleEditTextId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@drawable/bg_getvocab_edittext"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/vocabList_demo_example"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@android:color/black"
                tools:ignore="Autofill,RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <Button
                android:id="@+id/updateBtnId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_update"
                android:text="@string/updateVocab_btn_update"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>